--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
                 <img src="./images/dosaaa.jpg" alt="dosa" class="imge">
                 <p class="paa">Dosas are served hot, often with chutney and sambar (a lentil-based vegetable stew).
                     Dosas are a common food in South India.</p>
-                    <p class="p1">RS,100</p>
+                    <p class="p1">RS:50</p>
             </div>
         </a>
         </div>
