--- a/menu.html
+++ b/menu.html
@@ -21,16 +21,17 @@
         </a>
         </div>
         <div class="mana1">
+            <a href="next1.html">
             <h1 class="head">IDLI</h1>
             <div class="itemContainer">
                 <img src="./images/idli.jpeg" alt="dosa" class="imge">
                 <p class="paa">Idli is a type of savoury rice cake, originating from South India, popular as a breakfast food in Southern India.</p>
                 <p class="p1">RS,80</p>
             </div>
-            
-            
+        </a> 
         </div>
         <div class="mana1">
+            <a href="next2.html">
             <h1 class="head"> PURI</h1>
             <div class="itemContainer">
                 <img src="./images/puri.jpeg" alt="" class="imge">
@@ -38,14 +39,17 @@
                 <p class="p1">RS,60</p>
 
             </div>
+        </a>
         </div>
         <div class="mana1">
+            <a href="next3.html">
             <h1 class="head">VADA</h1>
             <div class="itemContainer">
                 <img src="./images/vada.jpeg" alt="dosa" class="imge">
                 <p class="paa">Vadas are sometimes stuffed with vegetables and traditionally served with chutneys and sambar.  </p>
                 <p class="p1">RS,70</p>
             </div>
+        </a>
             <div  class="bt1">
                 <a href="index.html">
             <button class="btn">back</button>
