--- a/order.html
+++ b/order.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>order</title>
     <link rel="stylesheet" href="order.css">
 </head>
 <body>
     <div class="car">
+        <form action="">
         <h1 class="th1">THANK YOU</h1>
         <h2>FOR YOUR ORDER</h2>
+        <a href="menu.html">
+        <img src="./images/smile.jpg" alt="" class="imgg">
+        <div class="hero">
+            <h1>VISIT AGIAN</h1>
+            <h2>MANA RESTAURANTS</h2>
+        </a>
+        </div>
+    </form>
     </div>
 </body>
 </html>
