--- a/next3.html
+++ b/next3.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="next.css">
+    <title>vada</title>
+    <link rel="stylesheet" href="next3.css">
 </head>
 <body>
     <div class="br1">
         <div class="ne1">
             <h1 class="h11">Mana Restautant</h1>
-            <h2 class="h22">DOSA</h2>
+            <h2 class="h22">VAD</h2>
             <h3 class="h33">served with 2 types of chutney and sambar</h3>
-            <img src="./images/dosaaa.jpg" alt="dosa" class="imgdosa">
+            <img src="./images/vada.jpeg" alt="IDLI" class="imgdosa">
             <a href="order.html">
             <button class="bt2">order now</button>
         </a>
     </div>
     </div>
-    
 </body>
 </html>
